--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: method_extractor_generator
 description: Extract methods and convert them to json for further processing.
 version: 1.0.0
-
+repository: https://github.com/LiewJunTung/Method-Extractor-Generator
 
 environment:
   sdk: ">=2.9.0 <3.0.0"
