--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,7 @@ dependencies:
   build: ^1.3.0
   build_config: ^0.4.0
   source_gen: ^0.9.0
-  method_extractor:
-    path: ../method_extractor/
+  method_extractor: ^1.0.0
 
 dev_dependencies:
   test: ^1.6.0
