--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: method_extractor_generator
 description: Extract methods and convert them to json for further processing.
-version: 1.1.2
+version: 1.2.0
 repository: https://github.com/LiewJunTung/Method-Extractor-Generator
 
 environment:
@@ -8,10 +8,10 @@ environment:
 
 dependencies:
   analyzer: "0.39.14" # Pin the analyzer version to work around generatiuon failure
-  build: ^1.3.0
-  build_config: ^0.4.0
-  source_gen: ^0.9.0
+  build: ^1.5.0
+  build_config: ^0.4.2
+  source_gen: ^0.9.7+1
   method_extractor: ^1.1.0
 
 dev_dependencies:
-  test: ^1.6.0
+  test: ^1.15.4
