--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,16 @@
 name: method_extractor_generator
 description: Extract methods and convert them to json for further processing.
-version: 1.2.0
+version: 1.2.0+1
 repository: https://github.com/LiewJunTung/Method-Extractor-Generator
 
 environment:
   sdk: ">=2.9.0 <3.0.0"
 
 dependencies:
-  analyzer: "0.39.14" # Pin the analyzer version to work around generatiuon failure
   build: ^1.5.0
   build_config: ^0.4.2
   source_gen: ^0.9.7+1
-  method_extractor: ^1.1.0
+  method_extractor: ^1.2.0+1
 
 dev_dependencies:
   test: ^1.15.4
