--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   build_config: ^1.0.0
   source_gen: ^1.0.1
   method_extractor: ^2.0.0+2
+  analyzer: ^1.7.1
 
 dev_dependencies:
   test: ^1.17.5
