--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: method_extractor_generator
 description: Extract methods and convert them to json for further processing.
-version: 3.0.0
+version: 3.1.0
 repository: https://github.com/LiewJunTung/Method-Extractor-Generator
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  build: ^2.2.1
-  build_config: ^1.0.0
-  source_gen: ^1.2.1
-  method_extractor: ^2.0.0+2
-  analyzer: ^5.10.0
+  build: 2.4.1
+  build_config: 1.1.1
+  source_gen: 1.4.0
+  method_extractor: 2.1.0
+  analyzer: 5.13.0
 
 dev_dependencies:
-  test: ^1.17.5
+  test: ^1.24.6
